update inswx report 3

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -1274,7 +1274,7 @@ $(function() {
 <h3>InsWX-related patents</h3>
 <div style='overflow-x: auto;'>
 
-<table id='tbl_patients' class="table table-striped table-bordered" cellspacing="0" >
+<table id='tbl_patients' class="table table-striped table-bordered" cellspacing="0" style="width: 3000px;">
 <!--  
 <colgroup width="29"></colgroup>
 <colgroup width="540"></colgroup>
@@ -2908,6 +2908,240 @@ $(function() {
 </table>
 
 </div>
+<hr/>
+<br/><br/>
+<h3>InsWX-related clinical trials</h3>
+<div style='overflow-x: auto;'>
+
+<table id='tbl_trials' class="table table-striped table-bordered" cellspacing="0" >
+
+<thead>
+<tr>
+	<td height="34" align="left">ID
+	</td>
+	<td align="left">Record name
+	</td>
+	<td align="left">Starting Date
+	</td>
+	<td align="left">Results recieved date
+	</td>
+	<td align="left">Sponsor
+	</td>
+	<td align="left">Product in trials
+	</td>
+	<td align="left">Indication
+	</td>
+	<td align="left">Status
+	</td>
+	<td align="left">Results availability
+	</td>
+	<td align="left">Link
+	</td>
+</tr>
+</thead>
+<tbody>
+<tr>
+	<td height="82" align="left">NCT02172625
+	</td>
+	<td align="left">The Effect of Protandim Supplementation on Oxidative Damage and Athletic Performance
+	</td>
+	<td align="left" sdnum="1033;0;@">06/20/2014
+	</td>
+	<td align="left" sdnum="1033;0;@">08/14/2016
+	</td>
+	<td align="left">University of Louisville
+	</td>
+	<td align="left">Protandim
+	</td>
+	<td align="left">Oxidative Stress
+	</td>
+	<td align="left">Completed
+	</td>
+	<td align="left">Available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/results/NCT02172625" target="_blank">https://clinicaltrials.gov/ct2/show/results/NCT02172625</a>
+	</td>
+</tr>
+<tr>
+	<td height="82" align="left">NCT00977730
+	</td>
+	<td align="left">The Effect of Protandim on Non-alcoholic Steatohepatitis (NASH)
+	</td>
+	<td align="left" sdnum="1033;0;@">09/14/2009
+	</td>
+	<td align="left" sdnum="1033;0;@">02/01/2013
+	</td>
+	<td align="left">University of Colorado, Denver
+	</td>
+	<td align="left">Protandim
+	</td>
+	<td align="left">Non-Alcoholic Steatohepatitis
+	</td>
+	<td align="left">Completed
+	</td>
+	<td align="left">Not available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT00977730">https://clinicaltrials.gov/ct2/show/NCT00977730</a>
+	</td>
+</tr>
+<tr>
+	<td height="82" align="left">NCT00936000
+	</td>
+	<td align="left">Antioxidant Replacement Therapy in Patients With Alcohol Abuse
+	</td>
+	<td align="left" sdnum="1033;0;@">07/07/2009
+	</td>
+	<td align="left" sdnum="1033;0;@">02/05/2013
+	</td>
+	<td align="left">University of Colorado, Denver
+	</td>
+	<td align="left">Protandim
+	</td>
+	<td align="left">Alcohol Abuse
+	</td>
+	<td align="left">Completed
+	</td>
+	<td align="left">Not available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT00936000">https://clinicaltrials.gov/ct2/show/NCT00936000</a>
+	</td>
+</tr>
+<tr>
+	<td height="66" align="left">NCT01125501
+	</td>
+	<td align="left">Protandim and the Metabolic Syndrome
+	</td>
+	<td align="left" sdnum="1033;0;@">05/17/2010
+	</td>
+	<td align="left"><br>
+	</td>
+	<td align="left">SomaLogic, Inc.<br>LifeVantage
+	</td>
+	<td align="left">Protandim
+	</td>
+	<td align="left">Metabolic Syndrome
+	</td>
+	<td align="left">Withdrawn
+	</td>
+	<td align="left">Not available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT01125501">https://clinicaltrials.gov/ct2/show/NCT01125501</a>
+	</td>
+</tr>
+<tr>
+	<td height="82" align="left">NCT01793935
+	</td>
+	<td align="left">Withania Somnifera: an Immunomodulator and Anti-inflammatory Agent for Schizophrenia
+	</td>
+	<td align="left" sdnum="1033;0;@">02/12/2013
+	</td>
+	<td align="left" sdnum="1033;0;@">03/06/2017
+	</td>
+	<td align="left">University of Pittsburgh
+	</td>
+	<td align="left">Sensoril
+	</td>
+	<td align="left">Schizophrenia
+	</td>
+	<td align="left">Completed
+	</td>
+	<td align="left">Not available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT01793935">https://clinicaltrials.gov/ct2/show/NCT01793935</a>
+	</td>
+</tr>
+<tr>
+	<td height="82" align="left">NCT01311180
+	</td>
+	<td align="left">A Clinical Trial to Study the Effects of Sensoril® for Patients With Generalized Anxiety Disorder
+	</td>
+	<td align="left" sdnum="1033;0;@">03/02/2011
+	</td>
+	<td align="left" sdnum="1033;0;@">04/20/2015
+	</td>
+	<td align="left">Natreon, Inc.
+	</td>
+	<td align="left">Sensoril
+	</td>
+	<td align="left">Generalized Anxiety Disorder
+	</td>
+	<td align="left">Completed
+	</td>
+	<td align="left">Not available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT01311180">https://clinicaltrials.gov/ct2/show/NCT01311180</a>
+	</td>
+</tr>
+<tr>
+	<td height="82" align="left">NCT00761761
+	</td>
+	<td align="left">Sensoril(Ashwaganhda)for Bipolar Disorder
+	</td>
+	<td align="left" sdnum="1033;0;@">09/25/2008
+	</td>
+	<td align="left" sdnum="1033;0;@">03/14/2016
+	</td>
+	<td align="left">University of Pittsburgh
+	</td>
+	<td align="left">Sensoril
+	</td>
+	<td align="left">Bipolar I Disorder<br>Bipolar II Disorder<br>Bipolar Disorder NOS
+	</td>
+	<td align="left">Completed
+	</td>
+	<td align="left">Available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT00761761">https://clinicaltrials.gov/ct2/show/NCT00761761</a>
+	</td>
+</tr>
+<tr>
+	<td height="82" align="left">NCT00010634
+	</td>
+	<td align="left">Complementary Naturopathic Medicine for Periodontitis
+	</td>
+	<td align="left" sdnum="1033;0;@">02/02/2001
+	</td>
+	<td align="left" sdnum="1033;0;@">08/17/2006
+	</td>
+	<td align="left">National Center for Complementary and Integrative Health (NCCIH)
+	</td>
+	<td align="left">Adaptogenic herbs
+	</td>
+	<td align="left">Periodontitis
+	</td>
+	<td align="left">Completed
+	</td>
+	<td align="left">Not available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT00010634">https://clinicaltrials.gov/ct2/show/NCT00010634</a>
+	</td>
+</tr>
+<tr>
+	<td height="82" align="left">NCT00689195
+	</td>
+	<td align="left">Pilot Study of Curcumin Formulation and Ashwagandha Extract in Advanced Osteosarcoma (OSCAT)
+	</td>
+	<td align="left" sdnum="1033;0;@">05/23/2008
+	</td>
+	<td align="left"><br>
+	</td>
+	<td align="left">Tata Memorial Hospital<br>Pharmanza Herbals Pvt Limited (PHPL)
+	</td>
+	<td align="left">Ashwagandha extract
+	</td>
+	<td align="left">Osteosarcoma
+	</td>
+	<td align="left">Unknown
+	</td>
+	<td align="left">Not available
+	</td>
+	<td align="left"><a href="https://clinicaltrials.gov/ct2/show/NCT00689195">https://clinicaltrials.gov/ct2/show/NCT00689195</a>
+	</td>
+</tr>
+</tbody>
+
+</table>
+</div>
 
 </div> <!--  end of Patents and Clinical trials -->
 
@@ -2939,7 +3173,8 @@ $(function() {
 	                   
 	              ],
 	       "columns": [
-	            	    { "width": "20%" },
+	            	    null,
+	            	    { "width": "180" },
 	            	    null,
 	            	    null,
 	            	    null,
@@ -2948,8 +3183,7 @@ $(function() {
 	            	    null,
 	            	    null,
 	            	    null,
-	            	    null,
-	            	    null,
+	            	    { "width": "350" },
 	            	    null,
 	            	  ],
 		});
