update inswx report 5

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -133,41 +133,63 @@
 <table id='tbl_topmol' class="table table-striped table-bordered" cellspacing="0">
 <thead>
 <tr class="tableizer-firstrow">
-<th>Name</th><th>IUPAC Name</th><th>Structure</th><th>PubChem CID</th><th>Vendors</th><th>dG(AP1), kcal/mol</th><th>Kd, nmol/l</th><th>dG(ACC2), kcal/mol</th><th>Kd, nmol/l</th><th>dG(PKCB), kcal/mol</th><th>Kd, nmol/l</th><th>dG(PDE4B), kcal/mol</th><th>Kd, nmol/l</th><th>dG(PDE4C), kcal/mol</th><th>Kd, nmol/l</th><th>MW</th><th>LogP</th><th>PSA</th></tr>
+<th>Name</th><th>IUPAC Name</th><th>Structure</th><th>PubChem CID</th><th>Vendors</th><th>dG(AP1), kcal/mol</th>
+<th>Kd, nmol/l</th><th>dG(ACC2), kcal/mol</th><th>Kd, nmol/l</th><th>dG(PKCB), kcal/mol</th>
+<th>Kd, nmol/l</th><th>dG(PDE4B), kcal/mol</th><th>Kd, nmol/l</th><th>dG(PDE4C), kcal/mol</th>
+<th>Kd, nmol/l</th><th>MW</th><th>LogP</th><th>PSA</th><th>CAS number</th>
+</tr>
 </thead>
 <tbody>
  <tr><td>INSWX270</td><td>7H-​1,​2,​3-​Triazolo[4,​5-​d]​pyrimidin-​7-​one, 5-​[1-​(2-​chlorobenzoyl)​-​3-​piperidinyl]​-​3,​6-​dihydro-​3-​[(2-​methylphenyl)​methyl]​-</td>
  <td><img src='/media/report-portal/inswx-report/inswx270.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_92353230.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/92353230' target='_blank'>92353230</a>
- </td><td>Aurora Screening Library <br/>United States"</td><td>-6.4</td><td>21504.00845</td><td>-9.5</td><td>117.9528712</td><td>-10.7</td><td>15.72374198</td><td>-10.1</td><td>43.06576963</td><td>-10</td><td>50.94031157</td><td>462.94</td><td>3.45</td><td>97.03</td></tr>
+ </td><td>Aurora Screening Library <br/>United States"</td><td>-6.4</td><td>21504.00845</td><td>-9.5</td><td>117.9528712</td><td>-10.7</td><td>15.72374198</td><td>-10.1</td><td>43.06576963</td><td>-10</td><td>50.94031157</td><td>462.94</td><td>3.45</td>
+ <td>97.03</td><td>891031-03-1</td>
+ </tr>
+ 
  <tr><td>INSWX290</td><td>&nbsp;</td><td>
  <img src='/media/report-portal/inswx-report/inswx290.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_54645831.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/54645831' target='_blank'>54645831</a></td>
- <td>&nbsp;</td><td>-7.6</td><td>2866.5981329</td><td>-10.4</td><td>26.02220302</td><td>-11.6</td><td>3.468897381</td><td>-11.7</td><td>2.932662382</td><td>-10.6</td><td>18.59881578</td><td>581.59</td><td>4.95</td><td>100.13</td></tr>
+ <td>&nbsp;</td><td>-7.6</td><td>2866.5981329</td><td>-10.4</td><td>26.02220302</td><td>-11.6</td><td>3.468897381</td><td>-11.7</td>
+ <td>2.932662382</td><td>-10.6</td><td>18.59881578</td><td>581.59</td><td>4.95</td><td>100.13</td><td>no</td>
+ </tr>
+ 
  <tr><td>INSWX292</td><td>&nbsp;</td><td>
  <img src='/media/report-portal/inswx-report/inswx292.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_50904531.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/50904531' target='_blank'>50904531</a></td>
- <td>&nbsp;</td><td>-8</td><td>1464.3647887</td><td>-10.7</td><td>15.72374198</td><td>-10.8</td><td>13.29310774</td><td>-10.3</td><td>30.78034227</td><td>-10.2</td><td>36.40850353</td><td>410.48</td><td>4.2</td><td>71.25</td></tr>
+ <td>&nbsp;</td><td>-8</td><td>1464.3647887</td><td>-10.7</td><td>15.72374198</td><td>-10.8</td><td>13.29310774</td>
+ <td>-10.3</td><td>30.78034227</td><td>-10.2</td><td>36.40850353</td><td>410.48</td><td>4.2</td><td>71.25</td><td>no</td>
+ </tr>
+ 
  <tr><td>INSWX293</td><td>&nbsp;</td><td>
  <img src='/media/report-portal/inswx-report/inswx293.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_54664940.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/54664940' target='_blank'>54664940</a></td>
- <td>&nbsp;</td><td>-6</td><td>42095.6246332</td><td>-10.6</td><td>18.59881578</td><td>-10.7</td><td>15.72374198</td><td>-11</td><td>9.50096584</td><td>-9.7</td><td>84.30430433</td><td>456.51</td><td>4.91</td><td>78.02</td></tr>
+ <td>&nbsp;</td><td>-6</td><td>42095.6246332</td><td>-10.6</td><td>18.59881578</td><td>-10.7</td><td>15.72374198</td><td>-11</td>
+ <td>9.50096584</td><td>-9.7</td><td>84.30430433</td><td>456.51</td><td>4.91</td><td>78.02</td><td>1403839-06-4  ; 1403845-06-6; 1403853-72-4  ; 1403868-12-1 for 4 isomers</td>
+ </tr>
+ 
  <tr><td>INSWX294</td><td>Benzamide, N-​[1,​4-​dihydro-​1,​4-​dioxo-​3-​(4-​phenyl-​1-​piperazinyl)​-​2-​naphthalenyl]​-</td><td>
  <img src='/media/report-portal/inswx-report/inswx294.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_56928031.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/56928031' target='_blank'>56928031</a></td>
- <td>&nbsp;</td><td>-6.1</td><td>35588.3271421</td><td>-10.2</td><td>36.40850353</td><td>-11.6</td><td>3.468897381</td><td>-11.3</td><td>5.74089501</td><td>-8.6</td><td>534.6541884</td><td>437.5</td><td>3.79</td><td>69.72</td></tr>
+ <td>&nbsp;</td><td>-6.1</td><td>35588.3271421</td><td>-10.2</td><td>36.40850353</td><td>-11.6</td><td>3.468897381</td><td>-11.3</td>
+ <td>5.74089501</td><td>-8.6</td><td>534.6541884</td><td>437.5</td><td>3.79</td><td>69.72</td><td>1640259-27-3 </td>
+ </tr>
 
- <tr><td>INSWX311</td><td>&nbsp;</td><td>
- <img src='/media/report-portal/inswx-report/INSWX311.png' />
+ <tr><td>INSWX317</td><td>&nbsp;</td><td>
+ <img src='/media/report-portal/inswx-report/INSWX317.png' />
      
-     <!-- <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_56928031.sdf' target='_blank'>Download .sdf file </a>-->
- </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/11305931' target='_blank'>11305931</a></td>
- <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_17223507.sdf' target='_blank'>Download .sdf file </a>
+ </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/17223507' target='_blank'>17223507</a></td>
+ <td>Aurora Fine Chemicals LLC <br/>
+TimTec</td><td>&nbsp;</td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+<td>&nbsp;</td><td>449.95</td><td>2.7</td><td>104</td><td>945334-76-9</td>
+</tr>
 
 
 </tbody>
