update inswx report 6

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -2930,6 +2930,11 @@ $(function() {
 </table>
 
 </div>
+<!-- -------------------------------------------------------------- -->
+<!-- -------------------------------------------------------------- -->
+<!-- -------------------------------------------------------------- -->
+<!-- -------------------------------------------------------------- -->
+<!-- -------------------------------------------------------------- -->
 <hr/>
 <br/><br/>
 <h3>InsWX-related clinical trials</h3>
@@ -3179,6 +3184,8 @@ $(function() {
 		
 		$(this).hide();
 		$("#hide_patients").slideDown('slow');
+		
+		$("#tbl_trials").DataTable();
 		
 		$("#tbl_patients").DataTable({
 	    	"paging":   true,
