update inswx report 7

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -81,9 +81,15 @@
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
             -->
           </ul>
+     <br/>     
+          <center>
+<img src='/media/report-portal/inswx-report/schema.png' style='width:70%; margin: 0 auto' /> <br/>
+<h4>INSWX compound family general action mechanism</h4>
+</center>
+<br/>
           
           {%if report.input_data_text%}
-          <h2 id="input_data">Experimental design and RNA-seq data analysis</h2>
+           <h2 id="input_data">Updates:</h2>
           <hr/>
           {{report.input_data_text|safe}}
 
@@ -112,10 +118,7 @@
 {%endif%}
 
 
-<center>
-<img src='/media/report-portal/inswx-report/schema.png' style='width:70%; margin: 0 auto' /> <br/>
-<h4>INSWX compound family general action mechanism</h4>
-</center>
+
 
 
 <!-- ----------- Top molecules -->
