update inswx report 7

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -82,11 +82,11 @@
             -->
           </ul>
      <br/>     
-          <center>
+<!--           <center>
 <img src='/media/report-portal/inswx-report/schema.png' style='width:70%; margin: 0 auto' /> <br/>
 <h4>INSWX compound family general action mechanism</h4>
 </center>
-<br/>
+<br/>--> 
           
           {%if report.input_data_text%}
            <h2 id="input_data">Updates:</h2>
