update inswx report 8

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -54,6 +54,8 @@
             <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Input data</a></li>
               <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#kinetic_analysis">Kinetic pathway modeling</a></li>-->
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#updates">Updates</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#general">General overview</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Top Compound Candidates</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
             <!--  <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#tf_analysis">Transcription Factor Analysis</a></li>-->
@@ -89,7 +91,7 @@
 <br/>--> 
           
           {%if report.input_data_text%}
-           <h2 id="input_data">Updates:</h2>
+           <h2 id="updates">Updates:</h2>
           <hr/>
           {{report.input_data_text|safe}}
 
@@ -3557,6 +3559,9 @@ var top_featur = $("#tbl-top_featur").DataTable( {
             
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
              -->
+             
+             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#updates">Updates</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#general">General overview</a></li>
              
              <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Top Compound Candidates</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
