update inswx report 9

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -55,7 +55,7 @@
               <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#kinetic_analysis">Kinetic pathway modeling</a></li>-->
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#updates">Updates</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#general">General overview</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#general">Project info</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Top Compound Candidates</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
             <!--  <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#tf_analysis">Transcription Factor Analysis</a></li>-->
@@ -3561,7 +3561,7 @@ var top_featur = $("#tbl-top_featur").DataTable( {
              -->
              
              <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#updates">Updates</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#general">General overview</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#general">Project info</a></li>
              
              <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#topmol">Top Compound Candidates</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
