--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -165,7 +165,8 @@
  <img src='/media/report-portal/inswx-report/inswx292.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_50904531.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/50904531' target='_blank'>50904531</a></td>
- <td>&nbsp;</td><td>-8</td><td>1464.3647887</td><td>-10.7</td><td>15.72374198</td><td>-10.8</td><td>13.29310774</td>
+ <td><a href='/media/report-portal/inswx-report/synthesis_route_INSWX292.pptx'>Download presentation</a></td>
+ <td>-8</td><td>1464.3647887</td><td>-10.7</td><td>15.72374198</td><td>-10.8</td><td>13.29310774</td>
  <td>-10.3</td><td>30.78034227</td><td>-10.2</td><td>36.40850353</td><td>410.48</td><td>4.2</td><td>71.25</td><td>no</td>
  </tr>
  
@@ -194,6 +195,58 @@
 TimTec</td><td>&nbsp;</td>
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
 <td>&nbsp;</td><td>449.95</td><td>2.7</td><td>104</td><td>945334-76-9</td>
+</tr>
+
+<tr><td>INSWX84</td><td>
+1,​2,​4-​Oxadiazole-​5-​propanamide, 3-​(1,​2-​dihydro-​2-​oxo-​3-​quinolinyl)​-​N-​(4-​fluorophenyl)​-</td>
+<td>
+ <img src='/media/report-portal/inswx-report/INSWX84.png' />
+     
+      <br/> <!--  <a href='/media/report-portal/inswx-report/Structure3D_CID_17223507.sdf' target='_blank'>Download .sdf file </a>-->
+ </td><td>MolPort-010-734-284</td>
+ <td>ChemDiv, Inc.</td><td>&nbsp;</td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>-9,8</td><td>71.27</td>
+<td>&nbsp;</td><td>392.4</td><td>3.18</td><td>101.14</td><td>1358373-07-5 CAS</td>
+</tr>
+
+<tr><td>INSWX86</td><td>
+</td>
+<td>
+ <img src='/media/report-portal/inswx-report/INSWX86.png' />
+     
+      <br/> <!--  <a href='/media/report-portal/inswx-report/Structure3D_CID_17223507.sdf' target='_blank'>Download .sdf file </a>-->
+ </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/2941388' target='_blank'>2941388</a></td>
+ <td>Vitas-M Laboratory, Ltd.<br/>
+PBMR Labs Ukraine (made-to-order)
+</td><td>&nbsp;</td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>-10.3</td><td>30.78</td>
+<td>&nbsp;</td><td>392.2</td><td>3.01</td><td>74.57</td><td></td>
+</tr>
+
+<tr><td>INSWX489</td><td>
+</td>
+<td>
+ <img src='/media/report-portal/inswx-report/INSWX489.png' />
+     
+      <br/> <!--  <a href='/media/report-portal/inswx-report/Structure3D_CID_17223507.sdf' target='_blank'>Download .sdf file </a>-->
+ </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/15987563' target='_blank'>15987563</a></td>
+ <td>ChemDiv, Inc.
+</td><td>&nbsp;</td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>-10</td><td>50.94</td>
+<td>&nbsp;</td><td>354.43</td><td>2.83</td><td>106.35</td><td></td>
+</tr>
+
+<tr><td>INSWX835</td><td>
+</td>
+<td>
+ <img src='/media/report-portal/inswx-report/INSWX835.png' />
+     
+      <br/> <!--  <a href='/media/report-portal/inswx-report/Structure3D_CID_17223507.sdf' target='_blank'>Download .sdf file </a>-->
+ </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/20892206' target='_blank'>20892206</a></td>
+ <td>ChemDiv, Inc.
+</td><td>&nbsp;</td>
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>-9.8</td><td>71.27</td>
+<td>&nbsp;</td><td>470.5</td><td>4.55</td><td>75.93</td><td></td>
 </tr>
 
 
