--- a/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
+++ b/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
@@ -435,7 +435,7 @@
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
-           <th>Dopamine_4_EC_Medium</th>           
+           <!-- <th>Dopamine_4_EC_Medium</th>  -->         
            <th>Midodrine_4_EC_Medium</th>
           </tr>
         </thead>  
@@ -445,12 +445,12 @@
   </div>
   
   <div role="tabpanel" class="tab-pane fade  " id="mms_tab" style='overflow-x: auto;'>     <br/> 
-    <h4>Table . MAN HIGHT SM</h4>
+    <h4>Table . MAN MEDIUM SM</h4>
     <table id="tbl-mms" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:100%;'>
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
-           <th>Dopamine_4_SM_Medium</th>
+           <!--  <th>Dopamine_4_SM_Medium</th>-->
            <th>Midodrine_4_SM_Medium</th>
 
           </tr>
